tests/ui/impl-trait/generic-with-implicit-hrtb-without-dyn.edition2021.stderr
error[E0782]: expected a type, found a trait
  --> $DIR/generic-with-implicit-hrtb-without-dyn.rs:6:24
   |
LL | fn ice() -> impl AsRef<Fn(&())> {
   |                        ^^^^^^^
   |
help: you can add the `dyn` keyword if you want a trait object
   |
LL | fn ice() -> impl AsRef<dyn Fn(&())> {
   |                        +++

error[E0782]: expected a type, found a trait
  --> $DIR/generic-with-implicit-hrtb-without-dyn.rs:6:24
   |
LL | fn ice() -> impl AsRef<Fn(&())> {
   |                        ^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: you can add the `dyn` keyword if you want a trait object
   |
LL | fn ice() -> impl AsRef<dyn Fn(&())> {
   |                        +++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0782`.
